Whole lot of Italy

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -10,6 +10,11 @@ PB_ITA_treaty_of_anzio_desc:0 "While Italy did support the Entente at the end of
 PB_ITA_grinding_import:0 "No More Trade"
 PB_ITA_grinding_import_desc:0 "As the global economy collapses, Italy's trade business has lost an enormous amount of money from the grinding imports and exports. Many nations return to their protectionist roots and do not allow most of their last merchants to export homegrown goods to rivals or friends, hoping to save the economy with every last bit. Italy has suffered the brunt of this grinding trade halt, leaving the ports of the proud Italian state empty like the Sahara desert."
 PB_ITA_repay_loans:0 "Repaying Loans"
+ITA_PB_Carlos_ECM:0 "Don Carlos"
+ITA_PB_Luigi_HOS:0 "Luigi Sturzo"
+ITA_PB_Dino_FAM:0 "Dino Grandi"
+ITA_PB_Federzoni_IAM:0 "Luigi Federzoni"
+PB_Radical_Opportunist:0 "Radical Opportunist"
   ##########################
   # PARTIES
   ##########################
@@ -97,11 +102,15 @@ italy.27.t:0 "Campaign in Trieste?"
 italy.28.t:0 "Campaign in South Tirol?"
 italy.29.t:0 "Campaign in Northern Dalmatia?"
 
+italy.30.t:0 "Napoli Protest"
+italy.30.d:0 "The recent leak of information regarding Prince Carlos' economic gambling has spread across Italy, agitating many in the process. Today, a series of protests occured in Naples, all demanding an end to Carlos' position as minister. Several parties, including the blackshirts, have promoted and supported the protests today and hope to gain something out of Carlos' termination from office. Should we listen to these despicable demands?"
+italy.30.a:0 "The king does not think so, nor does his prime minister!"
   ##########################
   # FOCUSSES
   ##########################
   POR_Country_Desc_Topbar:0 "§YThe Kingdom of Portugal§! is a secondary power in Europe in 1933.\n\nThe Empire of Portugal ended with the Brazilian war of Independence, as any relevance Portugal had was lost after losing its primary colony of Brazil. The empire went into an economic decline, quickly becoming one of the poorest countries in Europe. During the Great War, Portugal was scared to get entangled into the web of conflict stretched across Europe. However, British pressure and the threat of Spanish dominance forced Portugal into the Great War, becoming the main front of the §YIberian campaign§! that claimed so many innocent, young lives in the grinding machine of war. \n\nPortuguese troops were able to break the Spanish front in 1908, eventually leading to Spain capitulating on the 7th of may, 1910, sparking §Ythe Spanish Civil War§! with the Portguese troops stuck in the middle of it. Portuguese troops had to quickly redeploy to Galicia and the Portuguese-Spanish border, but not before several more young men were taken in front of our very own eyes. \n\nThe end of the Great War would see Portugal returning to its economic instability and colonial ventures, holding onto our relationship with Britain. However, Manuel II had started to create political enemies, such as §YThe Portuguese Republican Party§! and its paramilitary wing §YThe Liberated Youth§!: While enjoying popular support, the Republican Party itself is divided to its core ideologically, based upon a jacobin-liberal split. Only if Portugal would actively be in an international or national crisis, would the Republican party have a chance of challenging Manuel's reign. Still, Portugal's political landscape has been marked with the blood of politicians and monarchs for decades. What could stop that from happening under Manuel II? \n\nThe §YKingdom of Portugal§! is a §Ysecondary power§!"
 ITA_LOSES_CORES:0 "§RThe Kingdom of Two Sicilies will lose all its cores on the Italian peninsula and will only be able to regain them through conquest and embracing Italian nationalism once more."
+ITA_DESC:0 "Born as Prince Ferdinand Pius, §Yduke of Calabria§!, on the 25th of July, 1869, Ferdinand III would be groomed to become the succesor of Alfonso I of Italy. Coming from a grand family (in both prestige and general size), Ferdinand was often in the spotlight, overshadowing his lesser brothers and sisters as the eldest and the potential heir. This relationship would isolate Ferdinand from most of his brothers, except Carlos, which he would later appoint as the minister of the treasury during his reign. As a young lad, he became a member of the Italian army, 18 years after the hight of the risorgimento in 1971, and would quickly rise through the ranks, not experiencing real combat for a long time. With the outbreak of the §YGreat War§! in 1905, Ferdinand was decorated with many awards and commanded the northern Italian troops from his luxurious house on the hills outside of Naples. While not a military genius, he would prove to be somewhat experienced in strategy and held the Italian-German line for years. Eventually, Italy was forced to switch sides with the §YRome Declaration§! in 1907, resigning Ferdinand from his position on the northern front. Ferdinand III would begin his rule in 1911, when Alfonso gave up his throne after having betrayed his allies. Ferdinand's charmastic personality would help Italy stay relatively united after the Great War, but even his personality can not fix everything, as Italy will soon find out."
 
   ##########################
   # RELEASABLES
@@ -294,3 +303,9 @@ PB_ITA_support_in_french_savoy_3:0 "Popularity in French Savoy"
 PB_ITA_support_in_trieste_3:0 "Popularity in Trieste"
 PB_ITA_support_in_south_tirol_3:0 "Popularity in South Tirol"
 PB_ITA_support_in_northern_dalmatia_3:0 "Popularity in Northern Dalmatia"
+
+PB_ITA_support_in_malta_4:0 "Popularity in Malta"
+PB_ITA_support_in_french_savoy_4:0 "Popularity in French Savoy"
+PB_ITA_support_in_trieste_4:0 "Popularity in Trieste"
+PB_ITA_support_in_south_tirol_4:0 "Popularity in South Tirol"
+PB_ITA_support_in_northern_dalmatia_4:0 "Popularity in Northern Dalmatia"
