A metric fuckton of work done
(Italian focus tree expanded, more Italian descriptions, more Italian Generals and events, more Greek generals (2), a fuckton of gfx, added Tunisia with portrait and puppet status)

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -105,6 +105,9 @@ italy.29.t:0 "Campaign in Northern Dalmatia?"
 italy.30.t:0 "Napoli Protest"
 italy.30.d:0 "The recent leak of information regarding Prince Carlos' economic gambling has spread across Italy, agitating many in the process. Today, a series of protests occured in Naples, all demanding an end to Carlos' position as minister. Several parties, including the blackshirts, have promoted and supported the protests today and hope to gain something out of Carlos' termination from office. Should we listen to these despicable demands?"
 italy.30.a:0 "The king does not think so, nor does his prime minister!"
+italy.31.t:0 "The Question of Capital"
+italy.31.d:0 "With our recent economic crisis, many in the government have once again raised the question of capital. The current capital of Italy is based in Naples, having its roots in the old Bourbon monarchy of the southern kingdom. However, keeping our capital in Naples has clearly had its effects, keeping our influence effectively away from the north. Thus, a proposal has been made to move the administrative capital to Rome, while keeping Naples as a spirtual capital regarding culture. The proposal has found mass support among most liberal and socialist parties and many conservatives also seem to like the proposal. It will not be a surprise if this proposal will be approved by the government."
+italy.31.a:0 "My heart may lay in Naples, my brains lay in Rome"
   ##########################
   # FOCUSSES
   ##########################
@@ -214,7 +217,18 @@ ITA_expand_farming_grounds:0 "Expand Agricultural Grounds"
 ITA_dockyard_expansion:0 "Establish the Genoa Naval Academy"
 ITA_economic_miracle:0 "Miracolo Economico"
 ITA_shift_the_capital:0 "Shift the Capital"
-
+ITA_socialist_change:0 "Social Change for Italy"
+ITA_centralization_effort:0 "Programma di Centralizzazione"
+ITA_decentralized_market:0 "Decentralized Market Planning"
+ITA_fly_the_italian_banner:0 "United as Italians"
+ITA_regional_regulation:0 "Regional Regulations"
+ITA_reconstruct_rome:0 "Reconstruct Roma"
+ITA_agrarian_relief_effort:0 "Sardinian Relief Effort"
+ITA_welfare_state:0 "Nuovo State del Benessere"
+ITA_improve_workers_rights:0 "The Hammer Articles"
+ITA_liberalize_the_army_command:0 "Liberalize the Army Command"
+ITA_heal_the_military_divide:0 "Solve the Military Divide"
+ITA_union_rights:0 "The Right to Strike"
 #################
 #Decisions
 ############
@@ -309,3 +323,38 @@ PB_ITA_support_in_french_savoy_4:0 "Popularity in French Savoy"
 PB_ITA_support_in_trieste_4:0 "Popularity in Trieste"
 PB_ITA_support_in_south_tirol_4:0 "Popularity in South Tirol"
 PB_ITA_support_in_northern_dalmatia_4:0 "Popularity in Northern Dalmatia"
+
+PB_ITA_support_in_rome_desc:0 "Rome is one of the primary cities of Italy, having once been the great capital Romelus founded the roots of an empire. The city of Rome, even after the countless sackings, still stands today as a marvel of architecture, culture and history and is, with its large population and semi-large industry, important for an electoral victory."
+PB_ITA_support_in_rome_1_desc:0 "Rome is one of the primary cities of Italy, having once been the great capital Romelus founded the roots of an empire. The city of Rome, even after the countless sackings, still stands today as a marvel of architecture, culture and history and is, with its large population and semi-large industry, important for an electoral victory."
+PB_ITA_support_in_rome_2_desc:0 "Rome is one of the primary cities of Italy, having once been the great capital Romelus founded the roots of an empire. The city of Rome, even after the countless sackings, still stands today as a marvel of architecture, culture and history and is, with its large population and semi-large industry, important for an electoral victory."
+PB_ITA_support_in_rome_3_desc:0 "Rome is one of the primary cities of Italy, having once been the great capital Romelus founded the roots of an empire. The city of Rome, even after the countless sackings, still stands today as a marvel of architecture, culture and history and is, with its large population and semi-large industry, important for an electoral victory."
+PB_ITA_support_in_venezia_desc:0 "The serene city of Venice is one of the cities many think about when they think about Italy. As the prime home of the wealthy merchant republic decades ago, Venice decayed under Austrian influence after their defeat. Only after Italian liberation would Venice regain its glory, having to be rebuild after the deliberate destruction fire ignited by Austrian mercenaries."
+PB_ITA_support_in_venezia_1_desc:0 "The serene city of Venice is one of the cities many think about when they think about Italy. As the prime home of the wealthy merchant republic decades ago, Venice decayed under Austrian influence after their defeat. Only after Italian liberation would Venice regain its glory, having to be rebuild after the deliberate destruction fire ignited by Austrian mercenaries."
+PB_ITA_support_in_venezia_2_desc:0 "The serene city of Venice is one of the cities many think about when they think about Italy. As the prime home of the wealthy merchant republic decades ago, Venice decayed under Austrian influence after their defeat. Only after Italian liberation would Venice regain its glory, having to be rebuild after the deliberate destruction fire ignited by Austrian mercenaries."
+PB_ITA_support_in_venezia_3_desc:0 "The serene city of Venice is one of the cities many think about when they think about Italy. As the prime home of the wealthy merchant republic decades ago, Venice decayed under Austrian influence after their defeat. Only after Italian liberation would Venice regain its glory, having to be rebuild after the deliberate destruction fire ignited by Austrian mercenaries."
+PB_ITA_support_in_sicily_desc:0 "The agricultural island of Sicily is one of the great pearls that decorates Italy. The island, while not particularly industrially important, nor economically significant, has enjoyed a great deal of autonomy under the bourbon crown ever since the failed 14 months revolution, during which Sicily acted as an independent nation. The hatred of the bourbon family forced Sicily into an autonomous state, which it still gladly uses."
+PB_ITA_support_in_sicily_1_desc:0 "The agricultural island of Sicily is one of the great pearls that decorates Italy. The island, while not particularly industrially important, nor economically significant, has enjoyed a great deal of autonomy under the bourbon crown ever since the failed 14 months revolution, during which Sicily acted as an independent nation. The hatred of the bourbon family forced Sicily into an autonomous state, which it still gladly uses."
+PB_ITA_support_in_sicily_2_desc:0 "The agricultural island of Sicily is one of the great pearls that decorates Italy. The island, while not particularly industrially important, nor economically significant, has enjoyed a great deal of autonomy under the bourbon crown ever since the failed 14 months revolution, during which Sicily acted as an independent nation. The hatred of the bourbon family forced Sicily into an autonomous state, which it still gladly uses."
+PB_ITA_support_in_sicily_3_desc:0 "The agricultural island of Sicily is one of the great pearls that decorates Italy. The island, while not particularly industrially important, nor economically significant, has enjoyed a great deal of autonomy under the bourbon crown ever since the failed 14 months revolution, during which Sicily acted as an independent nation. The hatred of the bourbon family forced Sicily into an autonomous state, which it still gladly uses."
+PB_ITA_support_in_nice_desc:0 "Nizza, being the home of Garibaldi and thus the birthing place of northern Italian nationalism, has been a primary foothold of many Italian political parties, ranging from the socialists to the blackshirts and everything in between. The beautifull city that was stolen from us by France, returned to the Italian state after the Great War, becoming an integral part of it."
+PB_ITA_support_in_nice_2_desc:0 "Nizza, being the home of Garibaldi and thus the birthing place of northern Italian nationalism, has been a primary foothold of many Italian political parties, ranging from the socialists to the blackshirts and everything in between. The beautifull city that was stolen from us by France, returned to the Italian state after the Great War, becoming an integral part of it."
+PB_ITA_support_in_nice_3_desc:0 "Nizza, being the home of Garibaldi and thus the birthing place of northern Italian nationalism, has been a primary foothold of many Italian political parties, ranging from the socialists to the blackshirts and everything in between. The beautifull city that was stolen from us by France, returned to the Italian state after the Great War, becoming an integral part of it."
+PB_ITA_support_in_nice_1_desc:0 "Nizza, being the home of Garibaldi and thus the birthing place of northern Italian nationalism, has been a primary foothold of many Italian political parties, ranging from the socialists to the blackshirts and everything in between. The beautifull city that was stolen from us by France, returned to the Italian state after the Great War, becoming an integral part of it."
+PB_ITA_support_in_turin_desc:0 "The region of Savoy-Piedmont has been the home of the former Savoy dynasty, rulers of the mighty kingdom of Sardinia-Piedmont that threatened our Italian ambitions. However, today, Turin stands as a general economic periphery, as most of the former industry has relocated to the south by government efforts. As punishment for their old ways, Piedmont has become politically unimportant, only granting a single seat to the most popular state party."
+PB_ITA_support_in_turin_1_desc:0 "The region of Savoy-Piedmont has been the home of the former Savoy dynasty, rulers of the mighty kingdom of Sardinia-Piedmont that threatened our Italian ambitions. However, today, Turin stands as a general economic periphery, as most of the former industry has relocated to the south by government efforts. As punishment for their old ways, Piedmont has become politically unimportant, only granting a single seat to the most popular state party."
+PB_ITA_support_in_turin_2_desc:0 "The region of Savoy-Piedmont has been the home of the former Savoy dynasty, rulers of the mighty kingdom of Sardinia-Piedmont that threatened our Italian ambitions. However, today, Turin stands as a general economic periphery, as most of the former industry has relocated to the south by government efforts. As punishment for their old ways, Piedmont has become politically unimportant, only granting a single seat to the most popular state party."
+PB_ITA_support_in_turin_3_desc:0 "The region of Savoy-Piedmont has been the home of the former Savoy dynasty, rulers of the mighty kingdom of Sardinia-Piedmont that threatened our Italian ambitions. However, today, Turin stands as a general economic periphery, as most of the former industry has relocated to the south by government efforts. As punishment for their old ways, Piedmont has become politically unimportant, only granting a single seat to the most popular state party."
+PB_ITA_support_in_naples_desc:0 "As the capital of the Italian kingdom and the home of the Italian bourbon dynasty, Naples has become an important province for all parties. General political moves are mostly central to the South of Italy, with Naples being the heart of these moves. It's thus no surprise that Naples is the only province of Italy that has 4 seats."
+PB_ITA_support_in_naples_1_desc:0 "As the capital of the Italian kingdom and the home of the Italian bourbon dynasty, Naples has become an important province for all parties. General political moves are mostly central to the South of Italy, with Naples being the heart of these moves. It's thus no surprise that Naples is the only province of Italy that has 4 seats."
+PB_ITA_support_in_naples_2_desc:0 "As the capital of the Italian kingdom and the home of the Italian bourbon dynasty, Naples has become an important province for all parties. General political moves are mostly central to the South of Italy, with Naples being the heart of these moves. It's thus no surprise that Naples is the only province of Italy that has 4 seats."
+PB_ITA_support_in_naples_3_desc:0 "As the capital of the Italian kingdom and the home of the Italian bourbon dynasty, Naples has become an important province for all parties. General political moves are mostly central to the South of Italy, with Naples being the heart of these moves. It's thus no surprise that Naples is the only province of Italy that has 4 seats."
+
+ITA_socialist_state_flag_added:0 "§RSocialists become the major party in this state§!"
+ITA_liberals_state_flag_added:0 "§YLiberals become the major party in this state§!"
+ITA_conservatives_state_flag_added:0 "§BConservatives become the major party in this state§!"
+ITA_reactionaries_state_flag_added:0 "§gReactionaries become the major party in this state§!"
+
+
+
+
+
