--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -77,6 +77,12 @@ PB_Demagogue:0 "Violent Demagogue"
 PB_Revolutionary:0 "Ardent Revolutionary"
 PB_Dismal_Enigma:0 "Dismal Enigma"
 PB_Political_Protege:0 "Political Protégé"
+PB_Diplomatic_Strongman:0 "Diplomatic Strongman"
+
+PB_Technocrats:0 "Technocrat"
+PB_Militarists:0 "Militarist"
+PB_Clergy:0 "Clergy"
+PB_Plutocrats:0 "Plutocrat"
 
 ##########################
 # LEADER TRAITS
