--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -801,20 +801,20 @@
  UAR_cn_ADJ:0 "Arab"
  UAR_an_ADJ:0 "Arab"
 
- PER_ni:0 "Persian Empire"
- PER_ni_DEF:0 "Persian Empire"
- PER_ds:0 "Persian Empire"
- PER_ds_DEF:0 "Persian Empire"
- PER_rc:0 "Persian Empire"
- PER_rc_DEF:0 "Persian Empire"
- PER_an:0 "Persian Empire "
- PER_an_DEF:0 "Persian Empire"
- PER_cn:0 "Persian Empire"
- PER_cn_DEF:0 "Persian Empire"
- PER_lb:0 "Persian Empire"
- PER_lb_DEF:0 "Persian Empire"
- PER_ss:0 "Persian Empire"
- PER_ss_DEF:0 "Persian Empire"
+ PER_ni:0 "Sublime State of Persia"
+ PER_ni_DEF:0 "Sublime State of Persia"
+ PER_ds:0 "Sublime State of Persia"
+ PER_ds_DEF:0 "Sublime State of Persia"
+ PER_rc:0 "Sublime State of Persia"
+ PER_rc_DEF:0 "Sublime State of Persia"
+ PER_an:0 "Sublime State of Persia "
+ PER_an_DEF:0 "Sublime State of Persia"
+ PER_cn:0 "Sublime State of Persia"
+ PER_cn_DEF:0 "Sublime State of Persia"
+ PER_lb:0 "Sublime State of Persia"
+ PER_lb_DEF:0 "Sublime State of Persia"
+ PER_ss:0 "Sublime State of Persia"
+ PER_ss_DEF:0 "Sublime State of Persia"
  PER_jc:0 "Persian People's Republic"
  PER_jc_DEF:0 "Persian People's Republic"
  PER_ni_ADJ:0 "Persian"
