--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -22,6 +22,11 @@
 
   ENG_PB_John_Simon_IAM:0 "John Simon"
 
+  ENG_PB_Bertrand_Russell_SIM:0 "Bertrand Russell"
+  ENG_PB_Cosmo_Gordon_SIM:0 "Cosmo Gordon Lang"
+  ENG_PB_William_Allen_SIM:0 "William Allen"
+  ENG_PB_Frank_Tiarks_SIM:0 "Frank Tiarks"
+
   ##########################
   # FOCUSES
   ##########################
@@ -32,6 +37,7 @@
 
   PB_ENG_General_Election:0 "The General Election"
   PB_ENG_General_Election_desc:0 "The General Elections are finally here, and this election shall decide the fate of not only Britain and her economy, but the rest of the empire as a whole. All political parties in the spectrum, from the Worker's Union to the NPP, are vying for power, with varying policies that may strengthen or shaken the empire, so vote wisely."
+
   PB_ENG_StateSoc_Victory:0 "Worker's Union Victory"
   PB_ENG_National_Housing:0 "National Housing Initiative"
   PB_ENG_Trade_Union_Cooperation:0 "Approach the Trade Unions"
@@ -239,6 +245,8 @@
   PB_ENG_George_Dead_tooltip:0 "§YKing George V has died§!"
   PB_ENG_1934_Congress_Commenced:0 "§YThe 1934 Imperial Confederation Congress has begun§!"
   ENG_Great_Slump_Over_tooltip:0 "§YBritain has recovered from the Great Slump§!"
+  PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
+  ENG_General_Election_Completed_tooltip:0 §YThe General Election has been completed.§!"
 
   ##########################
   # IDEAS
@@ -271,12 +279,12 @@
   ENG_Major_Lobbying_Effort:0 "Major Lobbying Effort"
   ENG_Make_Compromises:0 "Make some Compromises"
   ENG_Opposition_Demands_Concessions:0 "Opposition demands Concessions"
-  opposition_support_increase_five_tt:0 "Opposition Support will §Rincrease§! by §G5%§!"
-  opposition_support_increase_ten_tt:0 "Opposition Support will §Rincrease§! by §G10%§!"
-  opposition_support_increase_twenty_tt:0 "Opposition Support will §Rincrease§! by §G20%§!"
-  opposition_support_decrease_five_tt:0 "Opposition Support will §Gdecrease§! by §G5%§!"
-  opposition_support_decrease_ten_tt:0 "Opposition Support will §Gdecrease§! by §G10%§!"
-  opposition_support_decrease_twenty_tt:0 "Opposition Support will §Gdecrease§! by §G20%§!"
+  opposition_support_increase_five_tt:0 "§YOpposition Support will§! §Rincrease§! by §G5%§!\n"
+  opposition_support_increase_ten_tt:0 "§YOpposition Support will§! §Rincrease§! by §G10%§!\n"
+  opposition_support_increase_twenty_tt:0 "§YOpposition Support will§! §Rincrease§! by §G20%§!\n"
+  opposition_support_decrease_five_tt:0 "§YOpposition Support will§! §Gdecrease§! by §R5%§!\n"
+  opposition_support_decrease_ten_tt:0 "§YOpposition Support will§! §Gdecrease§! by §R10%§!\n"
+  opposition_support_decrease_twenty_tt:0 "§YOpposition Support will§! §Gdecrease§! by §R20%§!\n"
 
   ##########################
   # EVENTS
@@ -294,12 +302,63 @@
   britain.3.a:0 "This is bad."
 
   britain.4.t:0 "Picking up the Pieces"
-  britain.4.d.0 ""
+  britain.4.d:0 ""
   britain.4.a:0 "At least the coalition is still intact"
 
   britain.5.t:0 "The Coalition Collapses"
   britain.5.d:0 ""
-  britain.5.a:0 "Oh for god's sake."
+  britain.5.a:0 "Oh for god's sake"
+
+  britain.6.t:0 "The General Elctions begin"
+  britain.6.d:0 ""
+  britain.6.a:0 "Let's see what we can do"
+
+  britain.7.t:0 "The General Election in Scotland"
+  britain.7.d:0 ""
+  britain.7.a:0 "The Tories maintain their majority!"
+  britain.7.b:0 "The Whigs beat out the Tories!"
+  britain.7.c:0 "The Unionists take Scotland!"
+  britain.7.e:0 "The NPP delivers a shock victory!"
+
+  britain.8.t:0 "The General Election in Northern England"
+  britain.8.d:0 ""
+  britain.8.a:0 "The Tories keep their seats!"
+  britain.8.b:0 "The Whigs steal the show!"
+  britain.8.c:0 "The Unionists stand supreme!"
+  britain.8.e:0 "The NPP tightens their lead!"
+
+  britain.9.t:0 "The General Election in Southern England"
+  britain.9.d:0 ""
+  britain.9.a:0 "The Tories gain more ground!"
+  britain.9.b:0 "The Whigs seize another victory!"
+  britain.9.c:0 "The Unionists deliver a crushing win!"
+  britain.9.e:0 "The NPP steals the election!"
+
+  britain.10.t:0 "The Results of the Elections"
+  britain.10.d:0 ""
+  britain.10.a:0 "And the winner is.."
+
+  britain.11.t:0 "The Tories win the Election"
+  britain.11.d:0 ""
+  britain.11.a:0 "Eden's gambit has paid off.."
+
+  britain.12.t:0 "The Whigs win the Election"
+  britain.12.d:0 ""
+  britain.12.a:0 "We're no longer in the shadow of the Tories!"
+
+  britain.13.t:0 "The WUP win the Election"
+  britain.13.d:0 ""
+  britain.13.a:0 "We'll keep the red flag flying here!"
+
+  britain.14.t:0 "The NPP win the Election"
+  britain.14.d:0 ""
+  britain.14.a:0 "Britain lives, and marches on!"
+
+  britain.15.t:0 "No Clear Winner"
+  britain.15.d:0 ""
+  britain.15.a:0 "The Tories will form a Coalition Government"
+  britain.15.b:0 "The Whigs will lead a new Coalition"
+
 
   ##########################
   # EVENTS
