Couple of small fixes

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -246,7 +246,7 @@
   PB_ENG_1934_Congress_Commenced:0 "§YThe 1934 Imperial Confederation Congress has begun§!"
   ENG_Great_Slump_Over_tooltip:0 "§YBritain has recovered from the Great Slump§!"
   PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
-  ENG_General_Election_Completed_tooltip:0 §YThe General Election has been completed.§!"
+  ENG_General_Election_Completed_tooltip:0 "§YThe General Election has been completed.§!"
 
   ##########################
   # IDEAS
