--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -194,7 +194,7 @@ spain.4.t:0 "Britain turns a Blind Eye"
 spain.4.d:0 "Even if we violated the 7th article of the treaty of A Coruña, Britain has yet to send us an ultimatum regarding our expansive endeavour. While some were worried about a British mobilization act, relative inactivity from London has confirmed this to not be the case. Whatever it may be, Britain has not bothered to send us an ultimatum or declare war and we can thus only assume that they've turned a blind eye for our violation."
 spain.4.a:0 "Gracias"
 spain.5.t:0 "Spain rejected our Ultimatum"
-spain.5.d:0 "After a tense, several days, words from Madrid have reached London. Well, technically it was only one word: \n\n \"No"\ \n\nSpain has clearly not listened to our warnings of violence and we should now make up our mind on the matter of intervening in Spain or allowing the state to continue its expansive behaviour."
+spain.5.d:0 "After a tense, several days, words from Madrid have reached London. Well, technically it was only one word: \n\n \"No" \n\nSpain has clearly not listened to our warnings of violence and we should now make up our mind on the matter of intervening in Spain or allowing the state to continue its expansive behaviour."
 spain.5.a:0 "Tommy, get your gun!"
 spain.5.b:0 "Spain is not a concern for our empire"
 spain.6.t:0 "Spain accepted our Ultimatum"
