--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -10,11 +10,7 @@ PB_ITA_treaty_of_anzio_desc:0 "While Italy did support the Entente at the end of
 PB_ITA_grinding_import:0 "No More Trade"
 PB_ITA_grinding_import_desc:0 "As the global economy collapses, Italy's trade business has lost an enormous amount of money from the grinding imports and exports. Many nations return to their protectionist roots and do not allow most of their last merchants to export homegrown goods to rivals or friends, hoping to save the economy with every last bit. Italy has suffered the brunt of this grinding trade halt, leaving the ports of the proud Italian state empty like the Sahara desert."
 PB_ITA_repay_loans:0 "Repaying Loans"
-ITA_PB_Carlos_ECM:0 "Don Carlos"
-ITA_PB_Luigi_HOS:0 "Luigi Sturzo"
-ITA_PB_Dino_FAM:0 "Dino Grandi"
-ITA_PB_Federzoni_IAM:0 "Luigi Federzoni"
-PB_Radical_Opportunist:0 "Radical Opportunist"
+
   ##########################
   # PARTIES
   ##########################
@@ -34,12 +30,6 @@ ITA_ss_party_long:0 "Partito Socialista Unitario"
 ITA_ss_party:0 "PSU"
 ITA_jc_party_long:0 "Camice Nere - Republicano"
 ITA_jc_party:0 "CN"
-
-
-
-  ##########################
-  # MINISTERS
-  ##########################
 
 
 
@@ -229,6 +219,40 @@ ITA_improve_workers_rights:0 "The Hammer Articles"
 ITA_liberalize_the_army_command:0 "Liberalize the Army Command"
 ITA_heal_the_military_divide:0 "Solve the Military Divide"
 ITA_union_rights:0 "The Right to Strike"
+ITA_liberals_in_charge:0 "Liberal Rule for Italy"
+ITA_introduce_regressive_taxation:0 "Regressive Taxation"
+ITA_increase_secularism:0 "The Secularization Act"
+ITA_universal_suffrage:0 "Universal Suffrage"
+ITA_free_market_ideals:0 "The Ideals of the Free Market"
+ITA_amend_the_papal_promise:0 "Amend the Papal Promise"
+ITA_individual_education_reform:0 "Secularize Education"
+ITA_reorganize_the_central_provinces:0 "Reorganize Our Central Provinces"
+ITA_freedom_of_religion:0 "Freedom of Religion"
+ITA_tolerate_jews:0 "Preserve Jewish Rights"
+ITA_catholic_change:0 "Catholic Conservatism for Italy"
+ITA_meeting_with_the_pope:0 "Meeting with the Pope"
+ITA_keeping_our_promise:0 "The Divine Papal Promise"
+ITA_oppose_market_socialism:0 "Oppose Market Socialism"
+ITA_end_secularization:0 "End Secular Schooling"
+ITA_protect_the_poor:0 "Protect the Poor"
+ITA_heal_the_divide_of_the_party:0 "Heal the Party Divide"
+ITA_expell_fascists:0 "Expell Reactionaries"
+ITA_army_loyalty:0 "Keep the Soldiers Loyal"
+ITA_1933_election:0 "1933 Election"
+ITA_ANI_rule:0 "Radical Change for Italy"
+ITA_transformation_of_the_state:0 "Transformation of the State"
+ITA_introduce_corporatism:0 "The Idea of Corporatism"
+ITA_condemm_republicanism:0 "Criminalize Republicanism"
+ITA_idealize_warfare:0 "Romantic Warfare"
+ITA_competing_imperialism:0 "Irredentist Imperialism"
+ITA_cultural_revolution:0 "Second Renaissance"
+ITA_romanitas:0 "Romanitas"
+ITA_use_christianity_as_a_tool:0 "Combine Faith and Pride"
+ITA_risorgimento_spirit:0 "Spirit of the Risorgimento"
+ITA_cooperation_with_the_blackshirts:0 "Cooperate with the Blackshirts"
+ITA_tale_of_the_liberal_monarchy:0 "Liberal Monarchy Myth"
+ITA_night_of_the_short_guns:0 "Night of the Short Guns"
+
 #################
 #Decisions
 ############
@@ -354,7 +378,23 @@ ITA_liberals_state_flag_added:0 "§YLiberals become the major party in this stat
 ITA_conservatives_state_flag_added:0 "§BConservatives become the major party in this state§!"
 ITA_reactionaries_state_flag_added:0 "§gReactionaries become the major party in this state§!"
 
-
-
-
-
+###########################
+# MINISTERS
+###########################
+PB_Il_Vate:0 "Il Vate"
+ITA_PB_Carlos_ECM:0 "Don Carlos"
+ITA_PB_Luigi_HOS:0 "Luigi Sturzo"
+ITA_PB_Dino_FAM:0 "Dino Grandi"
+ITA_PB_Federzoni_IAM:0 "Luigi Federzoni"
+PB_Radical_Opportunist:0 "Radical Opportunist"
+ITA_PB_Dannunzio_HOS:0 "Gabriele D'Annunzio"
+PB_Futurist:0 "Futurist"
+ITA_PB_Giovanni_Papini:0 "Giovanni Papini"
+ITA_PB_Alfred_IAM:0 "Alfredo Rocco"
+PB_Naval_Genius:0 "Naval Genius"
+ITA_PB_Ciano_ECM:0 "Costanzo Ciano"
+ITA_PB_Giuseppe_Bastianini_FAM:0 "Giuseppe Bastianini"
+ ITA_PB_Ambris_ECM:0 "Alceste De Ambris"
+PB_Popular_Aviator:0 "Popular Aviator"
+ITA_PB_Balbo_FAM:0 "Italo Balbo"
+ITA_PB_Luigi_ECM:0 "Luigi Einaudi"
