RIP in Pieces North Africa

--- a/localisation/PB_Captured_Cities_Events_l_english.yml
+++ b/localisation/PB_Captured_Cities_Events_l_english.yml
@@ -3,18 +3,42 @@
   ##########################
   # EVENTS
   ##########################
+  # NOTE - EVENTS WILL GO OVER FRAME IF LONGER THAN TEN (10) LINES. CHECK YOUR TEXT.
+  ##########################
 PBCity.1.t:0 "British Troops march through Paris"
 PBCity.1.d:0 "Paris, the city of Romance and the heart of the French nation, has fallen to continued British war effort. While many in the French government feared the idea of British troops marching through the champs Élysées, only a few thought of it as a possible reality due to the optimistic and romantic nationalism of the French party. With British soldiers now occupying the city, streetfighting and urban warfare has become a small thorn in the paw of the lion. The British have already arrested hundreds of [FRA.GetLeader]'s followers and several thousands have yet to be properly found by British military authorities."
 PBCity.1.a:0 "How long will this war last?"
 PBCity.1.b:0 "Our boys will end this war!"
 PBCity.1.c:0 "Paris has fallen, France has not!"
+
 PBCity.2.t:0 "Fall of Madrid"
 PBCity.2.d:0 "For the second time in the history of Spain are American soldiers walking on Madrid soil during war. The city of Madrid, capital of Spain and the heart of Castillian nationalism, has fallen after a long military campaign in Iberia. The fall of Madrid has been celebrated by many across the commonwealth, as everyone remembers the later effects of Spanish capitulation had on the French war effort during the First Great War. The photos and films of the American soldiers that have captured the city have spread like wildfire in both Europe and America."
 PBCity.2.a:0 "Interesting"
 PBCity.2.b:0 "American power saves the day once again"
 PBCity.2.c:0 "We will not let the Americans have their victory!"
+
 PBCity.3.t:0 "Fall of Moscow"
 PBCity.3.d:0 "After a long and hard campaign, Germany celebrates their recent victory against the Russian Empire at the battle of Moscow. After days of seiging and urban warfare, the city of Moscow has finally fallen into German hands. The Russian army, using a page out of their earlier wars against Napoleon, burned most of the old imperial city to the ground as to ensure a bitter victory for the Germans. \n\nThe German army has already begun to build up the defenses of Moscow as to defend against a Russian counterattack and the logistics of supplying the German armed forces in Moscow."
 PBCity.3.a:0 "Napoleon, eat your heart out"
 PBCity.3.b:0 "Germany continues to march on"
 PBCity.3.c:0 "We'll beat them back!"
+
+PBCity.4.t:0 "The Fall of Paris"
+PBCity.4.d:0 "After days of intense fighting, [16.Controller.GetAdjective] troops have broken through French defensive lines into Paris. House-to-house fighting across near-ancient Parisian neighborhoods effectively leveled the city, with French forces staging a last stand against the invaders in the Les Invalides. [16.Controller.GetAdjective] and French engagements continue throughout the darkness of the Catacombs.\n\nAbove, the Eiffel Tower continues to stand like a tombstone over the smoldering ruins of France's once proud capital."
+PBCity.4.a:0 "How terrible"
+PBCity.4.b:0 "Paris is lost, for now."
+
+PBCity.5.t:0 "The Fall of London"
+PBCity.5.d:0 "For the first time since the Norman Invasion, foreign troops marched into the British capital of London. [126.Controller.GetAdjective] forces pushed down the Thames, meeting fierce resistance from retreating British forces.\n\n[126.Controller.GetAdjective] commanders announced their victory from a provisional command post established in the newly conquered Buckingham Palace while [126.Controller.GetAdjective] soldiers posed for propaganda photos in front of the partially collapsed Houses of Parliament. The Royal Family has, reportedly, been evacuated to Scotland."
+PBCity.5.a:0 "Thus falls the British Empire"
+PBCity.5.b:0 "We will never surrender"
+
+PBCity.6.t:0 "The Fall of Frankfurt"
+PBCity.6.d:0 "[55.Controller.GetAdjective] forces took Frankfurt this morning, with German forces surrendering to spare the city from a lengthy siege. The city, now firmly under the command of the [55.Controller.GetAdjective] army, could only watch in horror as foreign soldiers marched through the streets.\n\nThe German capital, once host to the German legislature and government, is now merely just another city under [55.Controller.GetAdjective] occupation. The German government, along with the Kaiser, have fled North to a new provisional capital."
+PBCity.6.a:0 "Germany's days may be numbered"
+PBCity.6.b:0 "No retreat, No surrender."
+
+PBCity.7.t:0 "The Fall of Tokyo"
+PBCity.7.d:0 "Reports indicate that Tokyo has fallen to assaulting [282.Controller.GetAdjective] forces. Once the shining capital of the Japanese Empire, the city had lived through the bloody days of the Japanese Civil War only to fall to outside invaders.\n\nIn spite of the withdrawal of Japanese forces, the city remains in a state of perpetual conflict as fanatical Japanese apparatchiks resist the [282.Controller.GetAdjective] occupation at all costs. The city remains consumed in a cycle of rabid, horrific violence by both sides."
+PBCity.7.a:0 "So much for the revolution"
+PBCity.7.b:0 "We will fight to the bloody end."
