--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
 
- GER_ni:0 "German Empire"
- GER_ni_DEF:0 "German Empire"
- GER_ds:0 "German Empire"
- GER_ds_DEF:0 "German Empire"
- GER_rc:0 "German Empire"
- GER_rc_DEF:0 "The German Empire"
- GER_an:0 "German Empire "
- GER_an_DEF:0 "German Empire"
- GER_cn:0 "German Empire"
- GER_cn_DEF:0 "German Empire"
- GER_lb:0 "German Empire"
- GER_lb_DEF:0 "The German Empire"
- GER_ss:0 "German Empire"
- GER_ss_DEF:0 "The German Empire"
+ GER_ni:0 "United Kingdoms of Germany"
+ GER_ni_DEF:0 "United Kingdoms of Germany"
+ GER_ds:0 "United Kingdoms of Germany"
+ GER_ds_DEF:0 "United Kingdoms of Germany"
+ GER_rc:0 "United Kingdoms of Germany"
+ GER_rc_DEF:0 "The United Kingdoms of Germany"
+ GER_an:0 "United Kingdoms of Germany "
+ GER_an_DEF:0 "United Kingdoms of Germany"
+ GER_cn:0 "United Kingdoms of Germany"
+ GER_cn_DEF:0 "United Kingdoms of Germany"
+ GER_lb:0 "United Kingdoms of Germany"
+ GER_lb_DEF:0 "The United Kingdoms of Germany"
+ GER_ss:0 "United Kingdoms of Germany"
+ GER_ss_DEF:0 "The United Kingdoms of Germany"
  GER_jc:0 "German People's Republic"
  GER_jc_DEF:0 "German People's Republic"
  GER_ni_ADJ:0 "German"
@@ -25,22 +25,22 @@
  GER_cn_ADJ:0 "German"
  GER_an_ADJ:0 "German"
 
- ENG_ni:0 "United Kingdom"
- ENG_ni_DEF:0 "United Kingdom"
- ENG_ds:0 "United Kingdom"
- ENG_ds_DEF:0 "United Kingdom"
- ENG_rc:0 "United Kingdom"
- ENG_rc_DEF:0 "United Kingdom"
- ENG_an:0 "United Kingdom "
- ENG_an_DEF:0 "United Kingdom"
- ENG_cn:0 "United Kingdom"
- ENG_cn_DEF:0 "United Kingdom"
- ENG_lb:0 "United Kingdom"
- ENG_lb_DEF:0 "United Kingdom"
- ENG_ss:0 "United Kingdom"
- ENG_ss_DEF:0 "United Kingdom"
- ENG_jc:0 "Republic of Britannia"
- ENG_jc_DEF:0 "Republic of Britannia"
+ ENG_ni:0 "Great Britain"
+ ENG_ni_DEF:0 "Great Britain"
+ ENG_ds:0 "Great Britain"
+ ENG_ds_DEF:0 "Great Britain"
+ ENG_rc:0 "Great Britain"
+ ENG_rc_DEF:0 "Great Britain"
+ ENG_an:0 "Great Britain "
+ ENG_an_DEF:0 "Great Britain"
+ ENG_cn:0 "Great Britain"
+ ENG_cn_DEF:0 "Great Britain"
+ ENG_lb:0 "Great Britain"
+ ENG_lb_DEF:0 "Great Britain"
+ ENG_ss:0 "Great Britain"
+ ENG_ss_DEF:0 "Great Britain"
+ ENG_jc:0 "United Republics of Britain"
+ ENG_jc_DEF:0 "United Republics of Britain"
  ENG_ni_ADJ:0 "British"
  ENG_rc_ADJ:0 "British"
  ENG_lb_ADJ:0 "British"
@@ -3449,7 +3449,58 @@
  SCH_jc_ADJ:0 "Schleswig"
  SCH_ds_ADJ:0 "Schleswig"
  SCH_cn_ADJ:0 "Schleswig"
- SCH_an_ADJ:0 "Schleswig" 
+ SCH_an_ADJ:0 "Schleswig"
+
+ PRS_ni:0 "Independent State of Prussia"
+ PRS_ni_DEF:0 "Independent State of Prussia"
+ PRS_ds:0 "Independent State of Prussia"
+ PRS_ds_DEF:0 "Independent State of Prussia"
+ PRS_rc:0 "Independent State of Prussia"
+ PRS_rc_DEF:0 "The Independent State of Prussia"
+ PRS_an:0 "Independent State of Prussia "
+ PRS_an_DEF:0 "Independent State of Prussia"
+ PRS_cn:0 "Independent State of Prussia"
+ PRS_cn_DEF:0 "Independent State of Prussia"
+ PRS_lb:0 "Independent State of Prussia"
+ PRS_lb_DEF:0 "The Independent State of Prussia"
+ PRS_ss:0 "Independent State of Prussia"
+ PRS_ss_DEF:0 "The Independent State of Prussia"
+ PRS_jc:0 "Revolutionary State of Prussia"
+ PRS_jc_DEF:0 "Revolutionary State of Prussia"
+ PRS_ni_ADJ:0 "Prussian"
+ PRS_rc_ADJ:0 "Prussian"
+ PRS_lb_ADJ:0 "Prussian"
+ PRS_ss_ADJ:0 "Prussian"
+ PRS_jc_ADJ:0 "Prussian"
+ PRS_ds_ADJ:0 "Prussian"
+ PRS_cn_ADJ:0 "Prussian"
+ PRS_an_ADJ:0 "Prussian"
+
+ INA_ni:0 "Maghreb Concessions Zone"
+ INA_ni_DEF:0 "Maghreb Concessions Zone"
+ INA_ds:0 "Maghreb Concessions Zone"
+ INA_ds_DEF:0 "Maghreb Concessions Zone"
+ INA_rc:0 "Maghreb Concessions Zone"
+ INA_rc_DEF:0 "The Maghreb Concessions Zone"
+ INA_an:0 "Maghreb Concessions Zone"
+ INA_an_DEF:0 "Maghreb Concessions Zone"
+ INA_cn:0 "Maghreb Concessions Zone"
+ INA_cn_DEF:0 "Maghreb Concessions Zone"
+ INA_lb:0 "Maghreb Concessions Zone"
+ INA_lb_DEF:0 "The Maghreb Concessions Zone"
+ INA_ss:0 "Maghreb Concessions Zone"
+ INA_ss_DEF:0 "The Maghreb Concessions Zone"
+ INA_jc:0 "Maghreb Concessions Zone"
+ INA_jc_DEF:0 "Maghreb Concessions Zone"
+ INA_ni_ADJ:0 "International"
+ INA_rc_ADJ:0 "International"
+ INA_lb_ADJ:0 "International"
+ INA_ss_ADJ:0 "International"
+ INA_jc_ADJ:0 "International"
+ INA_ds_ADJ:0 "International"
+ INA_cn_ADJ:0 "International"
+ INA_an_ADJ:0 "International"
+ 
 ###################################
 # TEMPLATE
 ###################################
