--- a/localisation/PB_loading_bar_l_english.yml
+++ b/localisation/PB_loading_bar_l_english.yml
@@ -17,7 +17,7 @@ LOAD_GFX_PDXMAP_SHADERS:0 "Making Georgia Howl"
 #"Loading Map(Creating Shaders)..."
 LOAD_GFX_PDXMAP_TERRAIN:0 "Purging the Strasserites"
 #"Loading Map(Creating Terrain)..."
-LOAD_GFX_PDXMAP_BORDERS:0 "Unifying Italy"
+LOAD_GFX_PDXMAP_BORDERS:0 "Surpressing the CNT-FAI"
 #"Loading Map(Creating Borders)..."
 LOAD_GFX_PDXMAP_TEXTURES:0 "Balkanizing China"
 #"Loading Map(Creating Textures)..."
